--- a/skeleton-web-services/src/main/resources/config/application.properties
+++ b/skeleton-web-services/src/main/resources/config/application.properties
@@ -1,12 +1,20 @@
 ###
+# The Base Application Configuration File
+###
+
+###
+# Profile Configuration
+#  available profiles: batch
+###
+spring.profiles.active=batch
+
+###
 # Data Source Configuration
 ###
 
 # Hibernate
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.properties.hibernate.format_sql=true
-#spring.jpa.hibernate.format_sql=true
 
 # Initialization
 spring.datasource.schema=classpath:/data/hsqldb/schema.sql
